# compute-geometry

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  setup.py
.github/workflows/: python-package.yaml
cgeom/: __init__.py
cgeom/algorithms/: __init__.py  _convexhull.py  _delaunay.py  _intersection.py  _mincircle.py  _triangulation.py  _voronoi.py
cgeom/elements/: __init__.py  elements.py  models.py
cgeom/visualization/: __init__.py  _plotting.py
convex-hull/: convex-hull.py  fecho2.txt  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.tex  nuvem2.txt
examples/: convex-hull.ipynb  convex_hull.py  delaunay.py  elements.py  points1.txt  segment_intersection.py  voronoi-diagram.ipynb  voronoi.py
examples/task1-minimum-circle/: main.fdb_latexmk  main.fls  points.txt
examples/task2-triangulation/: main.aux  main.fdb_latexmk  triangulation.ipynb
examples/task3-mesher/: main.aux  main.fdb_latexmk  main.fls  mesher.ipynb
examples/task4-bilinear/: bilinear.ipynb  curvas1.txt  curvas2.txt  main.aux  main.fdb_latexmk  main.fls  main.tex
examples/work1-convex-hull/: fecho1.txt  main.aux  main.fdb_latexmk  main.run.xml
examples/work2-voronoi/: main.aux
minimum-circle/: analysis.py  analysis_minimum_circle.ipynb  main.aux  main.fls  minimum_circle.py
monography/: monography.aux  monography.fdb_latexmk  monography.fls  monography.out  monography.tex  neurips.sty  reference.bib
notes/: main_notes.aux  main_notes.fdb_latexmk  main_notes.fls  main_notes.tex
scikit-geometry/algorithms/: __init__.py  _convexhull.py  _mincircle.py  _voronoi.py
task1-minimum-circle/: main.aux  main.fdb_latexmk  main.tex
task2-triangulation/: main.fls  triangulation.ipynb  triangulation.py
task3-mesher/: dual_graph.txt  main.tex  malha.txt  malha_adj.txt
task4-bilinear/: bilinear.ipynb
tests/: test_convexhull.py  test_delaunay.py  test_elements.py  test_intersection.py  test_mincircle.py  test_simple.py  test_triangulation.py  test_validation.py  test_voronoi.py
triangulation/: main.tex
work1-convex-hull/: references.bib
work2-voronoi/: main.aux  main.fdb_latexmk  main.fls  main.tex  voronoi.ipynb  voronoi_plot.py
work3-monography/: monography.aux  monography.fdb_latexmk  monography.fls  monography.out  monography.tex
work3-monography/Kleyton-PolyMesherNew/: AdaptedPolymesher.m  BndryCnds.m  FaultsCnds.m  MbbDomain.m  Points_Around_Faults.m  PolyMesher.m  PolyMshr_CntrdPly.m  PolyMshr_FaultGen.m  PolyMshr_FixedPoints.m  PolyMshr_Rflct.m  PolyMshr_RndPtSet.m  PolyMshr_WellsGen.m  PolyScript.m  (+2 more)
(+5 files in other folders)
