[tool.commitizen]
version = "0.7.2"
changelog_incremental = true
version_files = [
    "pyproject.toml:version"
]

[tool.poetry]
name = "compute-geometry"
version = "0.1.0"
description = "Computational Geometry Library"
authors = ["Kleyton da Costa"]
maintainers = ["Kleyton da Costa <kleyton.vsc@gmail.com>"]
readme = "README.md"

packages = [
    { include = "cgeom" },
    { include = "cgeom/**/*.py" },
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0.0"

tqdm = {version=">=4.64.1",  optional = true}
seaborn = {version=">=0.11.2",  optional = true}

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
pytest = "^7.1.3"
commitizen = "^2.40.0"
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"