[project]
name = "compute-geometry"
version = "0.1.1"
description = "Computational Geometry Library"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Kleyton da Costa", email = "kleyton.vsc@gmail.com" },
]
maintainers = [
    { name = "Kleyton da Costa", email = "kleyton.vsc@gmail.com" },
]
dependencies = [
    "numpy>=1.22.0",
    "pandas>=1.4.0",
    "matplotlib>=3.5.0",
    "rich>=13.0.0",
    "seaborn>=0.11.2",
]

[dependency-groups]
dev = [
    "flake8>=5.0.4",
    "pre-commit>=2.20.0",
    "pytest>=7.1.3",
    "commitizen>=2.40.0",
    "ipykernel>=6.25.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cgeom"]

[tool.commitizen]
version = "0.7.2"
changelog_incremental = true
version_files = [
    "pyproject.toml:version"
]
